# hypernode

./: .gitignore  .gitmodules  .rgignore  Cargo.toml  README.md  architecture.md  populate_artifacts.sh  sync.sh
artifacts/: ERC20.json  IERC20.json  MockUSDT.json  RiftExchange.json  WETH.json
src/: bitcoin.rs  btc_indexer.rs  btc_rpc.rs  constants.rs  core.rs  error.rs  evm.rs  evm_indexer.rs  lib.rs  main.rs  node.rs  proof_broadcast.rs  proof_builder.rs  releaser.rs
