[package]
name = "hypernode"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path ="../circuits/utils" }
rift-lib = { path ="../circuits/lib" }
tokio = { version = "1.40.0", features = ["full"] }
alloy = { version = "0.2", features = ["full", "node-bindings"] }
futures-util = "0.3"
eyre = "0.6"
anyhow = "1.0.86"
clap = { version = "4.0", features = ["derive", "env"] }
bitcoincore-rpc-async = "3.0.1"
dotenv = "0.15.0"
