[package]
name = "hypernode"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path ="../circuits/utils" }
rift-lib = { path ="../circuits/lib" }
tokio = { version = "1.40.0", features = ["full"] }
alloy = { version = "0.2", features = ["full", "node-bindings"] }
futures-util = "0.3"
eyre = "0.6"
anyhow = "1.0.86"
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.22"
env_logger = "0.11.5"
reqwest = "0.12.7"
serde_json = "1.0.127"
rand = "0.8.5"
hex = "0.4.3"
bitcoin = "0.32.2"
